--- a/src/Services/Vehicles/appsettings.json
+++ b/src/Services/Vehicles/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Server=sql.data;Initial Catalog=eTravelAgency.VehicleCatalog;User Id=sa;Password=Pass@word",
+  "ConnectionString": "Server=vehicles.data;Initial Catalog=eTravelAgency.VehicleCatalog;User Id=sa;Password=Pass@word",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
