--- a/src/Services/Flights/package.json
+++ b/src/Services/Flights/package.json
@@ -8,6 +8,7 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "express": "^4.16.3"
+        "express": "^4.16.3",
+        "redis": "^2.8.0"
     }
 }
