--- a/src/Services/Flights/package.json
+++ b/src/Services/Flights/package.json
@@ -8,7 +8,7 @@
         "type" : "git",
         "url" : "https://github.com/zayscue/eTravelAgency.git"
     },
-    "maing": "server.js",
+    "main": "server.js",
     "scripts": {
         "start": "node server.js",
         "debug": "node --nolazy --inspect-brk=9229 server.js"
